added fw to programme

--- a/index.html
+++ b/index.html
@@ -127,25 +127,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-12 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-building text-white sr-icons"></i>
                         <h3>Singapore City Gallery</h3>
                         <p class="text-faded">Story of the nation's planning efforts, showing its remarkable physical transformation - past, present, and future.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-car text-white sr-icons"></i>
                         <h3>Land Transport Authority</h3>
                         <p class="text-faded">Learn about the evolution of Singapore's Road Networks and peek into future transport plans.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 text-center">
+                <div class="col-lg-3 col-md-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-tint text-white sr-icons"></i>
                         <h3>PUB NEWater</h3>
                         <p class="text-faded">A pillar of Singapore's water sustainability strategy is high-grade reclaimed water.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-wrench text-white sr-icons"></i>
+                        <h3>FusionWorld</h3>
+                        <p class="text-faded">Features a dynamic and interactive showcase of award-winning inventions and cutting edge in-house and industry-collaboration prototypes created by A*STAR's research institutes.</p>
                     </div>
                 </div>
             </div>
