new brochure with qr

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="img/brochure.pdf" target="_blank">Brochure <i class="fa fa-download"></i></a>
+                        <a href="img/brochureqr.pdf" target="_blank">Brochure <i class="fa fa-download"></i></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#programme">Programme</a>
