fixed contact us page, removed zhang chen name and contact details, fixed submission of contact form to personal email

--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
             <div class="col-md-6">
                 <div class="well well-sm">
                   <div id="form-messages"></div>
-                    <form id="ajax-contact" method="post">
-                      <fieldset>
+                    <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8"
+                        action="https://formspree.io/alexwongweilun@hotmail.co.uk" method="post">
+                      <fieldset id="fs-frm-inputs">
                         <div class="field">
                           <label class="col-md-4 control-label">Name *</label>
                           <div class="col-md-10 col-md-offset-1">
@@ -434,17 +435,12 @@
                           <div class="form-group">
                             <label class="col-md-8 control-label"></label>
                             <div class="col-md-4">
-                                <button
-                                type="submit"
-                                class="btn btn-warning"
-                                tabindex=5
-                                >Send
-                                    <span class="glyphicon glyphicon-send"></span>
-                                </button>
+                                <input class="btn btn-primary" type="submit" value="Submit">
                             </div>
                           </div>
                         </div>
                       </fieldset>
+
                     </form>
                 </div>
             </div>
@@ -460,9 +456,9 @@
                       <div class="text-center">
                           <h5><strong>China</strong></h5>
                           <img src="img/zc.jpeg" class="img-responsive img-circle about-image" alt="">
-                          <h4>Zhang Cheng</h4>
-                          <h5><em>+65 9735 0637</em></h5>
-                          <h5><a href="mailto:zhangcheng1@hotmail.com">zhangcheng1@hotmail.com</a></h5>
+                          <h4>Placeholder Name</h4>
+                          <h5><em>+65 9876 5432</em></h5>
+                          <h5><a href="mailto:placeholder_email@hotmail.com">placeholder_email@hotmail.com</a></h5>
                       </div>
                     </div>
                     <div class="col-md-6">
